Another refactor on the REST API, as I'd made a mistake
